# text-ocr

./: .gitignore  README.md  anki_generator.py  convert_anki_latex.py  formula_processor.py  implementation_plan.md  llm_processor.py  main.py  md_to_ankicard.py  md_to_ankicard_v02.py  merged_all_0329.tsv  principal_of_anki_cards.md  pyproject.toml  test.ipynb  test.py  test_APT（裁定価格理論）_cloze.tsv  test_Point：決定係数（R2）_cloze.tsv  test_エンタープライズDCF法_cloze.tsv  walkthrough.md
output/: エンタープライズDCF法_cloze.tsv  配当割引モデル_cloze.tsv
output/260329/: APT（裁定価格理論）_cloze.tsv  Point：1期間投資した場合の保有期間利回り_cloze.tsv  Point：2項モデルによるコール・オプションの価格評価_cloze.tsv  Point：APT（裁定価格理論）におけるファクターの特定方法_cloze.tsv  Point：FRAの約定金利_cloze.tsv  Point：IAPMの下で投資家が保有するポートフォリオ_cloze.tsv  Point：MBS 投資のメリット・デメリット_cloze.tsv  Point：PP、PIの長所・短所_cloze.tsv  Point：Sharpe-Lintner型CAPM（証券市場線）_cloze.tsv  Point：VaR_cloze.tsv  Point：betaの推定値_cloze.tsv  Point：アクティブ運用の基本法則_cloze.tsv  Point：アノマリー_cloze.tsv  Point：インデックス・ファンドの構築方法_cloze.tsv  Point：インデックス運用の方法_cloze.tsv  Point：イールド・カーブの変化_cloze.tsv  Point：イールド・カーブの曲率変化によるポートフォリオ戦略_cloze.tsv  Point：イールド・カーブ形状変化の原因_cloze.tsv  Point：オプションのリスク指標Greeks_cloze.tsv  Point：オルタナティブ投資とは？_cloze.tsv  Point：オルタナティブ投資のメリット①定性的表現_cloze.tsv  Point：オルタナティブ投資のメリット②定量的表現：シャープ比の比較_cloze.tsv  Point：カバーなし金利パリティ_cloze.tsv  Point：カバー付き金利パリティ_cloze.tsv  Point：カントリー・リスクの判断指標_cloze.tsv  Point：キャリー、ロールダウン_cloze.tsv  Point：クレジット・エンハンスメントの方法_cloze.tsv  Point：コンティンジェント・イミュニゼーション戦略_cloze.tsv  Point：コーラブル債のデュレーション_cloze.tsv  Point：コールとプットのデルタの関係_cloze.tsv  Point：シャープ・レシオ（シャープ比、シャープ測度）_cloze.tsv  Point：デルタヘッジ_cloze.tsv  (+65 more)
(+4 files in other folders)
