[project]
name = "text-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.81.0",
    "google-genai>=1.0.0",
    "pillow>=12.1.1",
    "pillow-heif>=1.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
